src/tagged.css
.tagged {
  font-size: 1em;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  border: 1px solid #000;
  text-align: left;

  padding: 0.25em;
}

.tagged-list {
  padding: 0;
  display: inline;
}

.tagged-item {
  display: inline-block;
  list-style: none;
  margin: 0.25em;
  padding: 0.25em;
}

.tagged-item-theme {
  color: #DDD;
  border-radius: 3px;
  background: #464646;
  border: 1px solid #000;
}
.tagged-item-theme:last-child {
  margin-right: 0;
}

.tagged-remove {
  vertical-align: 1px;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.tagged-input {
  margin: 0.25em;
  padding: 0.25em 0;
  width: 4.5em;

  font-size: 1em;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;

  border: none;
  background: none;

  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;

  box-shadow: none;
}
.tagged-input:hover, .tagged-input:focus {
  border: none;
  background: none;

  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;

  box-shadow: none;
}
.tagged-input:focus {
  outline: none
}

